--- a/style.css
+++ b/style.css
@@ -81,3 +81,9 @@ nav ul li a{
     color: #fff;
     cursor: pointer;
 }
+.comment img{
+    width: 7%;
+    position: absolute;
+    right: 7rem;
+    bottom: 5rem;
+}
